# Onprem_Dagster_Deployment

./: .env.example  .gitignore  README.md  dagster.yaml.postgres-example  dagster_cloud.yaml  profiles.example.yml  pyproject.toml  requirements.txt  workspace.yaml
.github/workflows/: branch_deployments.yml  deploy.yml
deploy/: dagster-daemon.service  dagster-webserver.service
my_dbt_project/: .gitignore  .user.yml  dbt_project.yml  package-lock.yml  packages.yml
my_dbt_project/macros/: check_for_columns.sql  create_ext_table.sql
my_dbt_project/models/: base_airbnb_reviews.sql  my_test.yml  source.yml
my_dbt_project/models/FCT/: FCT_reviews.sql
my_dbt_project/models/Marts/: full_moon_Joint_review.sql
my_dbt_project/models/dim/: dim_hosts.sql  dim_listings.sql  dim_listings_with_host.sql  dim_reviwe.sql
my_dbt_project/models/staging/: ANBraw_listing.yml  AnB_raw_listing.sql  raw_host.sql  raw_host.yml  reviews_source.yml
my_dbt_project/snapshots/: scd_raw_listing.sql
my_dbt_project/tests/: package.yml
my_dbt_project_dagster/: assets.py  constants.py  definitions.py  project.py  resources.py  schedules.py  schema_drift.py  sensors.py  source_freshness.py
